# uncertainty-loss

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yaml  tests.yaml
examples/fnirs-finger-tapping/: fnirs-finger-tapping.ipynb  fnirs_finger_tapping.py
examples/mnist/: mnist.ipynb  mnist.py
tests/: test_placeholder.py
tests/uncertainty_loss/: test_torch.py
uncertainty_loss/: __init__.py  _torch.py  core.py
