[tool.poetry]
name = "uncertainty-loss"
version = "0.1.2"
description = "Uncertainty Loss functions for deep learning"
authors = ["Mike Vaiana <mike@ae.studio>", "Bo Powers <bo.powers@ae.studio>"]
readme = "README.md"
packages = [{include = "uncertainty_loss"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.982"
pytest = "^7.1.3"
torch = "^1.12.1"
jupyterlab = "^3.4.8"
pandas = "^1.5.1"
scikit-learn = "^1.1.2"
mne = "^1.2.1"
mne-nirs = "^0.4.0"
matplotlib = "<3.6.1"
seaborn = "^0.12.1"
gitpython = "^3.1.29"
torchvision = "^0.13.1"
jupyter = "^1.0.0"
ipywidgets = "^8.0.2"
pytorch-lightning = "^1.7.7"
mlflow = "^1.30.0"

[tool.mypy]
ignore_missing_imports = "True"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
